--- a/coffeescript/client/views/index.html
+++ b/coffeescript/client/views/index.html
@@ -20,8 +20,8 @@
 
   <footer id="info">
     <p>Double-click to edit a todo</p>
-    <p>Created by Dominik Guzei - <a href="http://github.com/CodeAdventure">GitHub</a>&nbsp;&nbsp;<a href="http://twitter.com/DominikGuzei">Twitter</a></p>
-    <p>Part of <a href="http://com">TodoMVC</a></p>
+    <p><a href="http://github.com/Meteor-Space">Meteor Space</a> implementation by Dominik Guzei - <a href="http://github.com/CodeAdventure">GitHub</a>&nbsp;&nbsp;<a href="http://twitter.com/DominikGuzei">Twitter</a></p>
+    <p>Part of <a href="http://todomvc.com/">TodoMVC</a></p>
   </footer>
 
 </template>
