--- a/javascript/client/views/layout.html
+++ b/javascript/client/views/layout.html
@@ -1,7 +1,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Meteor • TodoMVC</title>
+  <title>Meteor Space • TodoMVC</title>
 </head>
 
 <body></body>
